--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,4 +1,7 @@
 body {
-    max-width: 1600px;
+    max-width: 960px;
     margin: 0 auto;
-}
+    padding: 4em;
+    font-size: 18px;
+    text-align: center;
+    }
