--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,19 +1,28 @@
 header{
-    background-color:#219ebc
+    background-color:#219ebc;
 }
 body{
     max-width: 1600px;
     margin: 0 auto;
-    background-color:#219ebc
+    background-color:#219ebc;
 }
 footer{
-    background-color:#219ebc
+    background-color:#219ebc;
+    color:#ffb703;
+}
+footer a{
+    color:#ffb703;
+}
+footer a:hover{
+    color:#ffb703;
 }
 nav a:hover{
-    background-color:#219ebc
+    background-color:#219ebc;
+    color:#ffb703;
 }
 nav a{
     text-align: center;
+    color:#ffb703;
 }
 #hero-msg h1, #hero-msg h4{
     text-align: center;
@@ -26,14 +35,28 @@ main section{
 }
 #background {
     height: 725px;
-    background-color:#219ebc
+    background-color:#219ebc;
 }
 .book, .join{
-    background-color:#219ebc
+    background-color:#219ebc;
+    color:#ffb703;
 }
 .book:hover, .join:hover{
-    background-color:#219ebc
+    background-color:#219ebc;
+    color:#ffb703;
 }
 .msg{
-    background-color:#219ebc
+    background-color:#219ebc;
+}
+.home-title{
+    color:#ffb703;
+}
+h4{
+    color:#ffb703;
+}
+.msg h2{
+    color:#ffb703;
+}
+.msg p{
+    color:#ffb703;
 }
