--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -5,10 +5,16 @@ body{
     max-width: 1600px;
     margin: 0 auto;
     background-color:#219ebc;
+    padding: 0;
 }
 footer{
     background-color:#219ebc;
     color:#ffb703;
+    padding: 25px 50px;
+    margin-top: 200px;
+}
+footer .social img{
+    padding-top: 15px;
 }
 footer a{
     color:#ffb703;
@@ -31,6 +37,7 @@ nav a{
     text-align: center;
     color:#ffb703;
     text-decoration: none;
+    padding: 35px;
 }
 #hero-msg h1, #hero-msg h4{
     text-align: center;
@@ -49,6 +56,10 @@ main section{
     background-color:#219ebc;
     color:#ffb703;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover, .join:hover{
     background-color:#219ebc;
@@ -56,25 +67,49 @@ main section{
 }
 .msg{
     background-color:#219ebc;
+    line-height: 1.5em;
+    padding: 35px;
 }
 .home-title{
     color:#ffb703;
+    font-family: "Lucida Console", "Courier New", monospace;
+    font-size: 2em;
+    margin-top: 10px;
+}
+h2{
+    margin: 0;
 }
 h4{
     color:#ffb703;
 }
 .msg h2{
     color:#ffb703;
+    font-family: "Lucida Console", "Courier New", monospace;
 }
 .msg p{
     color:#ffb703;
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 .icon{
     width: 80px;
+    padding-top: 10px;
 }
 .logo{
     width: 80px;
 }
 #hero-img{
     width: 100%;
+}
+#logo_link{
+    padding-top: 5px;
+}
+.rivers-card, .camping-card, .rapids-card{
+    margin: 200px 0;
+}
+.card-img{
+    border: 10px black;
+}
+main section img{
+    box-sizing: border-box;
 }
