--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -53,7 +53,7 @@ main section{
     background-color:#219ebc;
 }
 .book, .join{
-    background-color:#219ebc;
+    background-color:#8ecae6;
     color:#ffb703;
     text-decoration: none;
     font-size: 18px;
@@ -62,7 +62,7 @@ main section{
     border-radius: 5px;
 }
 .book:hover, .join:hover{
-    background-color:#219ebc;
+    background-color:black;
     color:#ffb703;
 }
 .msg{
