--- a/positionstyles.css
+++ b/positionstyles.css
@@ -7,6 +7,7 @@
 .green1{
     height: 200px;
     width: 200px;
+    background-color:green;
 }
 .blue1{
     width: 100%;
@@ -17,6 +18,7 @@
 .yellow1{
     height: 200px;
     width: 200px;
+    background-color:yellow;
 }
 .content1 {
     /* This is the parent of the activity 1 boxes. */
