--- a/positionstyles.css
+++ b/positionstyles.css
@@ -140,41 +140,41 @@
     height: 100px; 
     background-color: blue; 
      } 
-     /* Activity 6 styles */ 
      .content6 {
-        display:grid;
+        display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    }
-    .red6 {
-    width: 400px; 
-    height: 200px; 
-    background-color: red; 
-    z-index: 0;
-    } 
-    .green6 {
-    width: 200px; 
-    height: 200px; 
-    background-color: green; 
-    z-index:4;
-    grid-column:1/3;
-    grid-row:5/7;
-     } 
-    .yellow6 {
-    width: auto; 
-    height: 400px; 
-    background-color: gold; 
-    grid-column:5/7;
-    grid-row:3/7;
-    z-index:3;
-    } 
-    .blue6 {
-    width: auto; 
-    height: 400px; 
-    background-color: blue; 
-    grid-column:2/7;
-    grid-row:2/6;
-    z-index: 2;
-    } 
+      }
+      .red6 {
+        width: auto; 
+        height: 200px; 
+        background-color: red;
+        grid-column: 1/5;
+        grid-row: 1/3;
+        z-index: -1;
+      } 
+      .green6 {
+        width: auto; 
+        height: 200px; 
+        background-color: green;
+        grid-column: 1/3;
+        grid-row: 5/7;
+        z-index: 1;
+      } 
+      .yellow6 {
+        width: auto;
+        height: 400px; 
+        background-color: yellow;
+        grid-column: 5/7;
+        grid-row: 3/7;
+        z-index: 1;
+      } 
+      .blue6 {
+        width: auto; 
+        height: 400px; 
+        background-color: blue;
+        grid-column: 2/6;
+        grid-row: 2/6;
+      } 
 
 
 /* Do not make any changes below here */
