--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,5 +1,7 @@
 header{
     background-color:#219ebc;
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 body{
     max-width: 1600px;
@@ -12,6 +14,9 @@ footer{
     color:#ffb703;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 footer .social img{
     padding-top: 15px;
@@ -28,6 +33,10 @@ footer p{
 }
 footer p a:hover{
     text-decoration: underline;
+}
+nav{
+    display:flex;
+    justify-content: space-around;
 }
 nav a:hover{
     background-color:#219ebc;
@@ -51,6 +60,8 @@ main section{
 #background {
     height: 725px;
     background-color:#219ebc;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 .book, .join{
     background-color:#8ecae6;
@@ -69,6 +80,9 @@ main section{
     background-color:#219ebc;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #8ecae6;
 }
 .home-title{
     color:#ffb703;
@@ -98,18 +112,108 @@ h4{
 .logo{
     width: 80px;
 }
+#hero{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+#hero-box{
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
 #hero-img{
     width: 100%;
 }
+#hero-msg{
+    grid-column:2/3;
+    grid-row: 1/3;
+    margin-top: 100px;
+}
+#hero-msg h4{
+    color:white;
+}
 #logo_link{
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 .rivers-card, .camping-card, .rapids-card{
     margin: 200px 0;
 }
 .card-img{
     border: 10px black;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364 
+}
+.card-img:hover{
+    opacity: .6;
+    transform: scale(1.1);
 }
 main section img{
     box-sizing: border-box;
+}
+.card-img, .mountains{
+    width: 100%;
+}
+.rivers-card{
+    grid-column:2/4;
+    grid-row: 2/3;
+}
+.camping-card{
+    grid-column:5/7;
+    grid-row: 2/3;
+}
+.rapids-card{
+    grid-column:8/10;
+    grid-row: 2/3;
+}
+.mountains{
+    width: 100%;
+    grid-column:2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #8ecae6;
+}
+@media screen and (max-width: 900px){
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    #hero-msg h1 {
+        color: #6f7364;
+    }
+    .home-title {
+        font-size: 25px;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
