--- a/isme/styles/site-plan.css
+++ b/isme/styles/site-plan.css
@@ -17,11 +17,11 @@ Fonts are separated by a | */
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #ff5757;  /* headlines on a white background */ 
   --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
+  --paragraph-color-on-white: #5ce1e6; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
   --paragraph-background-color: #396E94  ;
-  --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
+  --nav-link-color: #ff5757;
+  --nav-background-color: #a42212;
   --nav-hover-link-color: white;
   --nav-hover-background-color: #396E94;
 }
