--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -130,8 +130,23 @@ h4{
     grid-row: 1/2;
     margin-top: 100px;
 }
+#hero-msg-two{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
 #hero-msg h4{
     color:white;
+}
+#main-text{
+    grid-column:2/3;
+    grid-row: 2/2;
+    margin-top: 50px;
+    text-align: center;
+    color: white;
+    max-width: 800px;
+    margin: 0 auto;
+    margin-bottom: 50px;
 }
 #logo_link{
     padding-top: 5px;
@@ -181,7 +196,43 @@ main section img{
     grid-row: 5/8;
     box-shadow: 5px 5px 10px #8ecae6;
 }
+.first-river{
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 1/8;
+    display: flex;
+    align-items: center;
 
+}
+.second-river{
+    max-width: 200px;
+    max-height: 600px;
+    grid-column: 8/10;
+    grid-row: 9/10;
+}
+.text-right{
+   
+    background-color:#219ebc;
+    line-height: 1.5em;
+    padding: 15px;
+    grid-column: 7/10;
+    grid-row: 1/7;
+}
+.text-left{
+    line-height: 1.5em;
+    padding: 15px;
+    grid-column: 1/10;
+    grid-row: 8/10;
+    padding-right: 300px;
+}
+
+.float-left {
+    
+    margin-right: 20px;
+    box-shadow: 5px 5px 10px #6f7364; 
+    transition: transform .5s;
+    border:10px black;
+}
 
 
 
