--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -225,7 +225,45 @@ main section img{
     grid-row: 8/10;
     padding-right: 300px;
 }
+#main-text{
+    grid-column:2/3;
+    grid-row: 2/2;
+    margin-top: 50px;
+    text-align: center;
+    color: white;
+    max-width: 800px;
+    margin: 0 auto;
+    margin-bottom: 50px;
+}
+.first-river{
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 1/8;
+    display: flex;
+    align-items: center;
 
+}
+.second-river{
+    max-width: 200px;
+    max-height: 600px;
+    grid-column: 8/10;
+    grid-row: 9/10;
+}
+.text-right{
+   
+    background-color:#219ebc;
+    line-height: 1.5em;
+    padding: 15px;
+    grid-column: 7/10;
+    grid-row: 1/7;
+}
+.text-left{
+    line-height: 1.5em;
+    padding: 15px;
+    grid-column: 1/10;
+    grid-row: 8/10;
+    padding-right: 300px;
+}
 
 
 
