--- a/isme/styles/style.css
+++ b/isme/styles/style.css
@@ -45,12 +45,14 @@ footer{
     grid-column:2/4;
     grid-row: 2/3;
     text-align:center;
+    font-family: century gothic;
 }
 .kilbycourt{
     max-width: 100%;
     grid-column:5/7;
     grid-row: 2/3;
     text-align: center;
+    font-family: century gothic;
 }
 
 .travel-card{
@@ -59,6 +61,7 @@ footer{
     grid-column:3/6;
     grid-row: 4/4;
     text-align:center;
+    font-family: century gothic;
 }
 .hobby-card{
     border:white;
@@ -67,6 +70,7 @@ footer{
     grid-column:3/6;
     grid-row: 6/6;
     text-align:center;
+    font-family: century gothic;
 }
 .friendtext{
     background-color:#5ce1e6;
@@ -75,6 +79,7 @@ footer{
     padding: 10px;
     padding-left: 15px;
     padding-right: 15px;
+    font-family: Lato, Helvetica, sans-serif;
 }
 .kilbytext{
     grid-column: 5/7;
@@ -83,8 +88,44 @@ footer{
     padding: 10px;
     padding-right: 15px;
     padding-left: 15px;
+    font-family: Lato, Helvetica, sans-serif;
 }
 .hobby-card:hover, .travel-card:hover{
     opacity: .6;
     transform: scale(1.1);
 }
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    padding-top: 10px;
+    text-decoration: none;
+    font-size: 17px;
+    font-family: century gothic;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Add an active class to highlight the current page */
+  .topnav a.active {
+    background-color: #5ce1e6;
+    color: white;
+  }
+  
+  /* Hide the link that should open and close the topnav on small screens */
+  .topnav .icon {
+    display: none;
+  }
