--- a/isme/styles/style.css
+++ b/isme/styles/style.css
@@ -22,6 +22,15 @@ nav a{
     text-decoration: none;
     padding: 35px;
 }
+.footer-nav{
+    display:flex;
+}
+.footer-nav a{
+    text-align:center;
+    color:#ff5757;
+    text-decoration: none;
+    padding: 35px;
+}
 body{
     background-color:#ff5757;
 }
@@ -29,11 +38,13 @@ body{
 footer{
     background-color:#5ce1e6;
     color:#ff5757;
-    padding: 25px 50px;
+    padding: 30px 50px;
     margin-top: 200px;
     display: flex;
     justify-content: space-around;
     align-items: center;
+    font-family:Arial, Helvetica, sans-serif;
+    
 }
 
 .card-img{
@@ -91,8 +102,8 @@ footer{
     font-family: Lato, Helvetica, sans-serif;
 }
 .hobby-card:hover, .travel-card:hover{
-    opacity: .6;
-    transform: scale(1.1);
+    opacity: .4;
+    transform: scale(1.01);
 }
 
 .tachineputa-card{
